<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>mil.nga.geopackage</groupId>
	<artifactId>geopackage-core</artifactId>
	<version>6.2.1</version>
	<packaging>jar</packaging>
	<name>GeoPackage Core</name>
	<url>https://github.com/ngageoint/geopackage-core-java</url>
	<description>Core functionality for GeoPackage implementations</description>
	<scm>
		<url>git@github.com:ngageoint/geopackage-core-java.git</url>
		<connection>scm:git:git@github.com:ngageoint/geopackage-core-java.git</connection>
		<developerConnection>scm:git:git@github.com:ngageoint/geopackage-core-java.git</developerConnection>
	</scm>
	<licenses>
		<license>
			<name>The MIT License (MIT)</name>
			<url>https://github.com/ngageoint/geopackage-core-java/blob/master/LICENSE.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<organization>
		<name>National Geospatial-Intelligence Agency</name>
		<url>https://www.nga.mil/</url>
	</organization>
	<developers>
		<developer>
			<id>bosborn</id>
			<name>Brian Osborn</name>
			<email>bosborn@caci.com</email>
			<organization>BIT Systems</organization>
			<organizationUrl>https://www.caci.com/bit-systems</organizationUrl>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>UTC−07</timezone>
		</developer>
	</developers>
	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<dependencies>
		<dependency>
			<groupId>com.j256.ormlite</groupId>
			<artifactId>ormlite-core</artifactId>
			<version>6.1</version>
		</dependency>
		<dependency>
			<groupId>mil.nga.sf</groupId>
			<artifactId>sf-wkb</artifactId>
			<version>2.0.5</version>
		</dependency>
		<dependency>
			<groupId>mil.nga.sf</groupId>
			<artifactId>sf-wkt</artifactId>
			<version>1.0.2</version>
		</dependency>
		<dependency>
			<groupId>mil.nga.sf</groupId>
			<artifactId>sf-proj</artifactId>
			<version>4.1.1</version>
		</dependency>
		<dependency>
			<groupId>mil.nga.oapi.features</groupId>
			<artifactId>oapi-features-json</artifactId>
			<version>2.0.1</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.3.1</version>
				<configuration>
					<links>
						<link>https://ngageoint.github.io/projections-java/docs/api/</link>
						<link>https://ngageoint.github.io/coordinate-reference-systems-java/docs/api/</link>
						<link>https://ngageoint.github.io/simple-features-java/docs/api/</link>
						<link>https://ngageoint.github.io/simple-features-wkb-java/docs/api/</link>
						<link>https://ngageoint.github.io/simple-features-wkt-java/docs/api/</link>
						<link>https://ngageoint.github.io/simple-features-proj-java/docs/api/</link>
						<link>https://ngageoint.github.io/simple-features-geojson-java/docs/api/</link>
						<link>https://ngageoint.github.io/ogc-api-features-json-java/docs/api/</link>
						<link>https://ormlite.com/javadoc/ormlite-core/</link>
					</links>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<additionalparam>-Xdoclint:none</additionalparam>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>deploy</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.8</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

</project>
